# tinyml

./: README.md  pyproject.toml
notebooks/: CFR.ipynb
notebooks/cfr/: kuhn.ipynb  rps.ipynb
